# HL-Compiler

./: .gitignore  License.md  README.md  cse199.cabal  hlCompiler.cabal
demos/: evenOdd.json
reference/: main.ml
src/: Demo.hs  DemoParse.hs  HL.hs  Main.hs  PnCalcDemo.hs  Tactic.hs  Term.hs  Test.hs  Types.hs  Util.hs
src/Demo/: EvenOdd.hs  LambdaCalc.hs  Logic.hs  PNCalc.hs  Std.hs
src/HL/: Compile.hs  DelayT.hs  InterleavedTactic.hs  Optimize.hs  Query.hs
