name:                hlCompiler
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Gregory Malecha, Chris Tetreault
maintainer:          gmalecha@cs.ucsd.edu, ctetreau@ucsd.edu
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable hlCompiler
  main-is:             Main.hs
  other-modules:       HL
                     , HL.Compile
                     , HL.Optimize
                     , HL.Query
                     , Tactic
                     , Term
                     , Util
                     , Demo.EvenOdd
                     , Demo.PNCalc
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9
                     , mtl >= 2.2 && < 2.3
                     , containers >= 0.5.6 && < 0.5.8
                     , pretty >= 1.1 && < 1.2
                     , criterion >= 1.1 && < 1.2
                     , deepseq >= 1.4 && < 1.5
                     , tasty >= 0.11 && < 0.12
                     , tasty-hunit >= 0.9 && < 0.10
                     , tasty-smallcheck >= 0.8 && < 0.9
                     , logict >= 0.6 && < 0.7
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src
  main-is:          Test.hs
  other-modules:       HL
                     , HL.Compile
                     , HL.Optimize
                     , HL.Query
                     , Tactic
                     , Term
                     , Util
                     , Demo.EvenOdd
                     , Demo.PNCalc
  build-depends:    base >=4.8 && <4.9
                  , mtl >= 2.2 && < 2.3
                  , containers >= 0.5.6 && < 0.5.8
                  , pretty >= 1.1 && < 1.2
                  , criterion >= 1.1 && < 1.2
                  , deepseq >= 1.4 && < 1.5
                  , tasty >= 0.11 && < 0.12
                  , tasty-hunit >= 0.9 && < 0.10
                  , tasty-smallcheck >= 0.8 && < 0.9
                  , logict >= 0.6 && < 0.7
